@@ -26,11 +26,11 @@ use std::{
 };
 
 lazy_static! {
-    static ref SPN_POOL: Pool<HashMap<SocketAddr, Chars, FxBuildHasher>> = Pool::new(256);
-    static ref SIGNED_ADDRS_POOL: Pool<Vec<(SocketAddr, Bytes)>> = Pool::new(256);
-    static ref ADDRS_POOL: Pool<Vec<SocketAddr>> = Pool::new(256);
-    pub(crate) static ref PATH_POOL: Pool<Vec<Path>> = Pool::new(256);
-    pub(crate) static ref COLS_POOL: Pool<Vec<(Path, Z64)>> = Pool::new(256);
+    static ref SPN_POOL: Pool<HashMap<SocketAddr, Chars, FxBuildHasher>> =
+        Pool::new(256, 100);
+    static ref SIGNED_ADDRS_POOL: Pool<Vec<(SocketAddr, Bytes)>> = Pool::new(256, 100);
+    pub(crate) static ref PATH_POOL: Pool<Vec<Path>> = Pool::new(256, 10000);
+    pub(crate) static ref COLS_POOL: Pool<Vec<(Path, Z64)>> = Pool::new(256, 10000);
 }
 
 pub(crate) const MAX_WRITE_BATCH: usize = 100_000;
